--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
             </div>
         </div>
         <canvas id="pixelCanvas" width="320" height="320"></canvas>
+        <canvas id="imageCanvas" width="320" height="320" style="position: absolute; top: 0; left: 0;"></canvas>
     </div>
-    <button id="saveBtn">Save Image</button>
+    <div id="imageControls">
+        <div>
+            <button id="saveBtn">Save Image</button>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
