Removed WIP buttons

--- a/index.html
+++ b/index.html
@@ -12,14 +12,23 @@
 <body>
 
     <header>
-        <h1>Pixel Art Creator</h1>
+        <h1>INKD Pixel Art Creator</h1>
     </header>
+
+    <div id="line-tools">
+        <button id="saveBtn" class="tool-btn" title="Export as PNG">
+            <i class="fas fa-save"></i> Export as PNG
+        </button> 
+        <button id="exportSvgBtn" class="tool-btn" title="Export as SVG">
+            <i class="fas fa-file-export"></i> Export SVG
+        </button>
+    </div>
 
     <div id="container">
         <div id="toolbox">
             <div id="toolInstructions">
                 Use mouse left to draw pixels.
-                Use mouse right to erase pixels
+                Use mouse right to erase pixels.
             </div>
             <div id="bgcolorPicker">
                 <label for="bgColorSelect">Background Color:</label>
@@ -65,12 +74,15 @@
     </div>
     <div id="imageControls">
         <div>
-            <button id="saveBtn" title="Save your artwork"><i class="fas fa-save"></i> Save</button> <!-- Added icon -->
             <button id="connectWalletBtn" title="Connect your Solana wallet">Connect Wallet</button>
             <button id="mintBtn" title="Mint your artwork on chain">Mint Artwork</button>
         </div>
     </div>
-
+    <div id="preview-container">
+        <canvas id="previewCanvas"></canvas>
+        <div class="preview-buttons">
+    </div>
+    </div>
 
 
     <footer>
