Fixed SVG export bug

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
 
     <header>
-        <h1>INKD Pixel Art Creator</h1>
+        <h1>Pixel Art Creator</h1>
     </header>
 
     <div id="line-tools">
-        <button id="saveBtn" class="tool-btn" title="Export as PNG">
+            <button id="saveBtn" class="tool-btn" title="Export as PNG">
             <i class="fas fa-save"></i> Export as PNG
         </button> 
         <button id="exportSvgBtn" class="tool-btn" title="Export as SVG">
@@ -73,10 +73,7 @@
         </div>
     </div>
     <div id="imageControls">
-        <div>
-            <button id="connectWalletBtn" title="Connect your Solana wallet">Connect Wallet</button>
-            <button id="mintBtn" title="Mint your artwork on chain">Mint Artwork</button>
-        </div>
+
     </div>
     <div id="preview-container">
         <canvas id="previewCanvas"></canvas>
